--- a/nba.html
+++ b/nba.html
@@ -240,6 +240,124 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for January 21, 2026
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         Cleveland Cavaliers vs Charlotte Hornets
+        </a>
+       </td>
+       <td>
+        January 21, 2026 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 22, 2026 4:00 PM:00" data-start="January 21, 2026 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Indiana Pacers vs Boston Celtics
+        </a>
+       </td>
+       <td>
+        January 21, 2026 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 22, 2026 4:30 PM:00" data-start="January 21, 2026 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Brooklyn Nets vs New York Knicks
+        </a>
+       </td>
+       <td>
+        January 21, 2026 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 22, 2026 4:30 PM:00" data-start="January 21, 2026 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         Atlanta Hawks vs Memphis Grizzlies
+        </a>
+       </td>
+       <td>
+        January 21, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 22, 2026 5:00 PM:00" data-start="January 21, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         Detroit Pistons vs New Orleans Pelicans
+        </a>
+       </td>
+       <td>
+        January 21, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 22, 2026 5:00 PM:00" data-start="January 21, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         Oklahoma City Thunder vs Milwaukee Bucks
+        </a>
+       </td>
+       <td>
+        January 21, 2026 6:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 22, 2026 6:30 PM:00" data-start="January 21, 2026 6:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-7">
+         Toronto Raptors vs Sacramento Kings
+        </a>
+       </td>
+       <td>
+        January 21, 2026 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 22, 2026 7:00 PM:00" data-start="January 21, 2026 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
