--- a/nhl.html
+++ b/nhl.html
@@ -134,6 +134,39 @@
             <td><a href="https://roxiestreams.live/nhl-streams-8">New York Rangers vs Los Angeles Kings</a></td>
             <td>January 20, 2026 07:00 PM</td>
             <td><span class="countdown-timer" data-end="2026-01-21 19:00:00" data-start="2026-01-20 19:00:00"></span></td>
+        </tr>
+        <tr style="background-color: #333; color: white;">
+            <td colspan="3"><strong>Wednesday, January 21, 2026</strong></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-1">Detroit Red Wings vs Toronto Maple Leafs</a></td>
+            <td>January 21, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-22 16:00:00" data-start="2026-01-21 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-2">Anaheim Ducks vs Colorado Avalanche</a></td>
+            <td>January 21, 2026 06:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-22 18:00:00" data-start="2026-01-21 18:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-3">Philadelphia Flyers vs Utah Mammoth</a></td>
+            <td>January 21, 2026 06:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-22 18:00:00" data-start="2026-01-21 18:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-4">Pittsburgh Penguins vs Calgary Flames</a></td>
+            <td>January 21, 2026 06:30 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-22 18:30:00" data-start="2026-01-21 18:30:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-5">New York Islanders vs Seattle Kraken</a></td>
+            <td>January 21, 2026 06:30 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-22 18:30:00" data-start="2026-01-21 18:30:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-6">Washington Capitals vs Vancouver Canucks</a></td>
+            <td>January 21, 2026 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-22 19:00:00" data-start="2026-01-21 19:00:00"></span></td>
         </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
