--- a/soccer-streams-12.html
+++ b/soccer-streams-12.html
@@ -102,6 +102,7 @@
             <div id="playerContainer"></div>
 	<div class="streamchanger">
 	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('barca.m3u8', '601'))">Stream 1</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('barcelona.m3u8', '601'))">Stream 2 (ES)</button>
 	</div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
