--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 <tbody>
 <tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer">UEFA Champions League</a></td>
+<td><a href="https://roxiestreams.live/soccer">UEFA Europa League</a></td>
 <td>January 21, 2026 12:00 PM</td>
 <td><span class="countdown-timer" data-end="January 22, 2026 12:00:00 PM" data-start="January 21, 2026 12:00:00 PM"></span></td>
 </tr>
@@ -192,11 +192,6 @@
 <td><a href="https://roxiestreams.live/nba">NBA</a></td>
 <td>January 21, 2026 4:00 PM</td>
 <td><span class="countdown-timer" data-end="January 22, 2026 04:00:00 PM" data-start="January 21, 2026 04:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/aew">AEW</a></td>
-<td>January 21, 2026 5:00 PM</td>
-<td><span class="countdown-timer" data-end="January 22, 2026 05:00:00 PM" data-start="January 21, 2026 05:00:00 PM"></span></td>
 </tr>
 <tr>
 </tr></tr></tbody>
