--- a/soccer-streams-6.html
+++ b/soccer-streams-6.html
@@ -101,7 +101,7 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
 	<div class="streamchanger">
-	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('athletic.m3u8', '601'))">Stream 1</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('tnt5.m3u8', 'daffodil'))">Stream 1</button>
 	</div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
@@ -119,7 +119,7 @@
 <script>
 var clapprPlayer;
 var domains = [];
-var subdomain = '601';  // Edit this per HTML file
+var subdomain = 'daffodil';  // Edit this per HTML file
 
 // Load domains from txt file
 fetch('domains.txt')
@@ -133,7 +133,7 @@ fetch('domains.txt')
     console.error('Failed to load domains.txt');
   });
 
-function getRandomStream(streamPath, subdomain = '601') {
+function getRandomStream(streamPath, subdomain = 'daffodil') {
   if (domains.length === 0) {
     return `https://${subdomain}.shadow-ran.online/${streamPath}`; // Fallback
   }
