--- a/soccer.html
+++ b/soccer.html
@@ -98,59 +98,24 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Aston Villa vs Fenerbahçe</a></td>
-<td>January 22, 2026 09:45 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Auxerre vs PSG</a></td>
+<td>January 23, 2026 11:00 AM</td>
 <td><span class="countdown-timer" data-end="January 23, 2026 09:45:00 AM" data-start="January 22, 2026 09:45:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Bologna vs Celtic</a></td>
-<td>January 22, 2026 09:45 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">St. Pauli vs Hamburger SV</a></td>
+<td>January 23, 2026 11:30 AM</td>
 <td><span class="countdown-timer" data-end="January 23, 2026 09:45:00 AM" data-start="January 22, 2026 09:45:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">PAOK vs Real Betis</a></td>
-<td>January 22, 2026 09:45 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Inter Milan vs Pisa</a></td>
+<td>January 23, 2026 11:45 AM</td>
 <td><span class="countdown-timer" data-end="January 23, 2026 09:45:00 AM" data-start="January 22, 2026 09:45:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Young Boys vs Lyon</a></td>
-<td>January 22, 2026 09:45 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Levante vs Elche</a></td>
+<td>January 23, 2026 12:00 PM</td>
 <td><span class="countdown-timer" data-end="January 23, 2026 09:45:00 AM" data-start="January 22, 2026 09:45:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Dinamo Zagreb vs FCSB</a></td>
-<td>January 22, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 23, 2026 12:00:00 PM" data-start="January 22, 2026 12:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-6">Celta Vigo vs Lille</a></td>
-<td>January 22, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 23, 2026 12:00:00 PM" data-start="January 22, 2026 12:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-7">Rangers vs Ludogorets</a></td>
-<td>January 22, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 23, 2026 12:00:00 PM" data-start="January 22, 2026 12:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-8">Roma vs Stuttgart</a></td>
-<td>January 22, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 23, 2026 12:00:00 PM" data-start="January 22, 2026 12:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-9">Sporting Braga vs Nottingham Forest</a></td>
-<td>January 22, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 23, 2026 12:00:00 PM" data-start="January 22, 2026 12:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-10">Cruzeiro vs Democrata GV</a></td>
-<td>January 22, 2026 1:30 PM</td>
-<td><span class="countdown-timer" data-end="January 23, 2026 01:30:00 PM" data-start="January 22, 2026 01:30:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-11">Mexico vs Panama</a></td>
-<td>January 22, 2026 6:00 PM</td>
-<td><span class="countdown-timer" data-end="January 23, 2026 06:00:00 PM" data-start="January 22, 2026 06:00:00 PM"></span></td>
 </tr>
 <tr>
 </tr></tbody></tr></tbody></table></div>
