--- a/soccer.html
+++ b/soccer.html
@@ -98,6 +98,11 @@
 <tr>
 <tbody>
 <tr>
+<td><a href="https://roxiestreams.live/soccer-streams-11">Mexico vs Panama</a></td>
+<td>January 22, 2026 6:00 PM</td>
+<td><span class="countdown-timer" data-end="January 23, 2026 06:00:00 PM" data-start="January 22, 2026 06:00:00 PM"></span></td>
+</tr>
+<tr>
 <td><a href="https://roxiestreams.live/soccer-streams-1">Auxerre vs PSG</a></td>
 <td>January 23, 2026 11:00 AM</td>
 <td><span class="countdown-timer" data-end="January 23, 2026 09:45:00 AM" data-start="January 22, 2026 09:45:00 AM"></span></td>
