--- a/fighting.html
+++ b/fighting.html
@@ -98,6 +98,11 @@
 </thead>
 <tbody>
 <tr>
+<td><a href="https://roxiestreams.live/ppv-streams-1">ZUFFA BOXING: WALSH VS OCAMPO</a></td>
+<td>January 23, 2026 14:30 PM</td>
+<td><span class="countdown-timer" data-end="January 30, 2026 23:59:00" data-start="January 23, 2026 14:30:00"></span></td>
+</tr>
+<tr>
 <td><a href="https://roxiestreams.live/wwe-streams">WWE Smackdown</a></td>
 <td>January 23, 2026 17:00 PM</td>
 <td><span class="countdown-timer" data-end="January 30, 2026 23:59:00" data-start="January 23, 2026 17:00:00"></span></td>
