--- a/index.html
+++ b/index.html
@@ -184,14 +184,24 @@
 <tbody>
 <tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer">UEFA Europa League</a></td>
-<td>January 21, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 22, 2026 12:00:00 PM" data-start="January 21, 2026 12:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.live/soccer">Laliga</a></td>
+<td>January 23, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 24, 2026 12:00:00 PM" data-start="January 23, 2026 12:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/ppv-streams-1">ZUFFA BOXING: WALSH VS OCAMPO</a></td>
+<td>January 23, 2026 2:30 PM</td>
+<td><span class="countdown-timer" data-end="January 24, 2026 02:30:00 PM" data-start="January 23, 2026 02:30:00 PM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/nba">NBA</a></td>
-<td>January 21, 2026 4:00 PM</td>
-<td><span class="countdown-timer" data-end="January 22, 2026 04:00:00 PM" data-start="January 21, 2026 04:00:00 PM"></span></td>
+<td>January 23, 2026 4:00 PM</td>
+<td><span class="countdown-timer" data-end="January 24, 2026 04:00:00 PM" data-start="January 23, 2026 04:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/wwe-streams">WWE Smackdown</a></td>
+<td>January 23, 2026 5:00 PM</td>
+<td><span class="countdown-timer" data-end="January 24, 2026 05:00:00 PM" data-start="January 23, 2026 05:00:00 PM"></span></td>
 </tr>
 <tr>
 </tr></tr></tbody>
