--- a/soccer-streams-21.html
+++ b/soccer-streams-21.html
@@ -13,15 +13,15 @@
     <link href="/css/buttons.css" rel="stylesheet">
     <link href="imgs/iconn.png" rel="shortcut icon" type="x-icon"/>
 
-    <!-- Disable devtools script (optional, from your original) -->
+    <!-- Disable devtools (optional) -->
     <script disable-devtool-auto src="https://cdn.jsdelivr.net/npm/disable-devtool/disable-devtool.min.js"></script>
 
     <!-- Clappr core -->
     <script src="https://cdn.jsdelivr.net/npm/clappr@latest/dist/clappr.min.js"></script>
-    <!-- DashShakaPlayback plugin for DASH -->
+    <!-- DashShakaPlayback plugin (wraps Shaka Player) -->
     <script src="https://cdn.jsdelivr.net/gh/clappr/dash-shaka-playback@latest/dist/dash-shaka-playback.js"></script>
 
-    <!-- Google Analytics (from your original) -->
+    <!-- Google Analytics (optional) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-EQ3BHVQGMN"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -106,7 +106,6 @@
             <div id="playerContainer"></div>
 
             <div class="streamchanger">
-                <!-- If you add more streams, just change the URL passed into showPlayer -->
                 <button class="streambutton" onclick="showPlayer('clappr', DASH_SOURCE)">Stream 1</button>
             </div>
 
@@ -124,8 +123,13 @@
     </footer>
 
     <script>
-        // Your DASH MPD URL
-        const DASH_SOURCE = "https://abm5x5xaaaaaaaamjgudev5k44qb3.otte.live.cf.ww.aiv-cdn.net/lhr-nitro/live/dash/enc/wf8usag51e/out/v1/bd3b0c314fff4bb1ab4693358f3cd2d3/cenc.mpd";
+        // DASH MPD for your own content
+        const DASH_SOURCE =
+          "https://abm5x5xaaaaaaaamjgudev5k44qb3.otte.live.cf.ww.aiv-cdn.net/lhr-nitro/live/dash/enc/wf8usag51e/out/v1/bd3b0c314fff4bb1ab4693358f3cd2d3/cenc.mpd";
+
+        // Clear Key pair for your own test content:
+        // kid: d0f2e5c39e70c18f29bf77768a1ad89a
+        // key: d6853c51fcf37a18905f0609972395d7
 
         var clapprPlayer;
 
@@ -146,6 +150,13 @@
                     },
                     plugins: [DashShakaPlayback],
                     shakaConfiguration: {
+                        drm: {
+                            // Clear Key config for your own content
+                            clearKeys: {
+                                "d6853c51fcf37a18905f0609972395d7":
+                                  "d0f2e5c39e70c18f29bf77768a1ad89a"
+                            }
+                        },
                         streaming: {
                             rebufferingGoal: 15
                         }
@@ -154,13 +165,13 @@
             }
         }
 
-        window.onload = function() {
+        window.onload = function () {
             showPlayer("clappr", DASH_SOURCE);
         };
     </script>
 
     <script>
-        // Disable right-click + some devtool keys, from your original
+        // Optional: disable context menu and common devtools shortcuts
         document.addEventListener("contextmenu", function (e) {
             e.preventDefault();
         });
@@ -177,7 +188,7 @@
 
     <script src="js/bootstrap.bundle.min.js"></script>
 
-    <!-- Your pop script; keep as-is if you still use it -->
+    <!-- Pop script -->
     <script id="aclib" type="text/javascript" src="//acscdn.com/script/aclib.js"></script>
     <script type="text/javascript">
         aclib.runPop({
