--- a/nba.html
+++ b/nba.html
@@ -198,6 +198,166 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for February 03, 2026
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-1">
+         Denver Nuggets vs Detroit Pistons
+        </a>
+       </td>
+       <td>
+        February 03, 2026 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 04, 2026 4:00 PM:00" data-start="February 03, 2026 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-2">
+         Utah Jazz vs Indiana Pacers
+        </a>
+       </td>
+       <td>
+        February 03, 2026 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 04, 2026 4:00 PM:00" data-start="February 03, 2026 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-3">
+         New York Knicks vs Washington Wizards
+        </a>
+       </td>
+       <td>
+        February 03, 2026 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 04, 2026 4:00 PM:00" data-start="February 03, 2026 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-4">
+         Los Angeles Lakers vs Brooklyn Nets
+        </a>
+       </td>
+       <td>
+        February 03, 2026 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 04, 2026 4:30 PM:00" data-start="February 03, 2026 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-5">
+         Atlanta Hawks vs Miami Heat
+        </a>
+       </td>
+       <td>
+        February 03, 2026 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 04, 2026 4:30 PM:00" data-start="February 03, 2026 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-6">
+         Boston Celtics vs Dallas Mavericks
+        </a>
+       </td>
+       <td>
+        February 03, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 04, 2026 5:00 PM:00" data-start="February 03, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-7">
+         Chicago Bulls vs Milwaukee Bucks
+        </a>
+       </td>
+       <td>
+        February 03, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 04, 2026 5:00 PM:00" data-start="February 03, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-8">
+         Orlando Magic vs Oklahoma City Thunder
+        </a>
+       </td>
+       <td>
+        February 03, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 04, 2026 5:00 PM:00" data-start="February 03, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-9">
+         Philadelphia 76ers vs Golden State Warriors
+        </a>
+       </td>
+       <td>
+        February 03, 2026 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 04, 2026 7:00 PM:00" data-start="February 03, 2026 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.info/nba-streams-10">
+         Phoenix Suns vs Portland Trail Blazers
+        </a>
+       </td>
+       <td>
+        February 03, 2026 8:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="February 04, 2026 8:00 PM:00" data-start="February 03, 2026 8:00 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
