--- a/nba-streams-9.html
+++ b/nba-streams-9.html
@@ -101,8 +101,8 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil.xn--1000-ugoa0hsb9a0hb.com/nba7.m3u8')">Stream 1</button>
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://601.xn--1000-ugoa0hsb9a0hb.com/nbaa.m3u8')">Stream 2</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://601.xn--1000-ugoa0hsb9a0hb.com/nba9.m3u8')">Stream 1</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://601.xn--1000-ugoa0hsb9a0hb.com/nba4.m3u8')">Stream 2</button>
             </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.info"></iframe>
@@ -137,7 +137,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://daffodil.xn--1000-ugoa0hsb9a0hb.com/nba7.m3u8');
+            showPlayer('clappr', 'https://601.xn--1000-ugoa0hsb9a0hb.com/nba9.m3u8');
         };
     </script>
     <script>
