--- a/nfl-streams-1.html
+++ b/nfl-streams-1.html
@@ -105,6 +105,7 @@
                 <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil.xn--1000-ugoa0hsb9a0hb.com/main.m3u8')">Sky Sports Main</button>
                 <button class="streambutton" onclick="showPlayer('clappr', 'https://601.xn--1000-ugoa0hsb9a0hb.com/tsn.m3u8')">TSN</button>
                 <button class="streambutton" onclick="showPlayer('clappr', 'https://601.xn--1000-ugoa0hsb9a0hb.com/channelfive.m3u8')">Channel 5</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://602.xn--1000-ugoa0hsb9a0hb.com/thedaffodil.m3u8')">4K (ABOVE 12MBPS)</button>
             </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.info"></iframe>
