--- a/nfl-streams-1.html
+++ b/nfl-streams-1.html
@@ -100,13 +100,13 @@
     <div class="container container-fluid pt-2 text-white">
         <div class="fullplayer">
             <div id="playerContainer"></div>
-            <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://601.833577.xyz/daffodil.m3u8')">NBC</button>
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil.833577.xyz/sky.m3u8')">Sky Sports Main</button>
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://601.833577.xyz/tsn.m3u8')">TSN</button>
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://601.833577.xyz/channelfive.m3u8')">Channel 5</button>
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://602.833577.xyz/thedaffodil.m3u8')">4K (ABOVE 12MBPS)</button>
-            </div>
+	<div class="streamchanger">
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('daffodil.m3u8', '601'))">NBC</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('sky.m3u8', 'daffodil'))">SKY SPORTS MAIN</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('tsn.m3u8', '601'))">TSN</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('channelfive.m3u8', '601'))">Channel 5</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('thedaffodil.m3u8', '602'))">4K UHD</button>
+	</div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.info"></iframe>
             </div>
@@ -120,29 +120,46 @@
         <p class="mb-0 text-body-secondary text-center text-lg-start">Roxiestreams © 2024</p>
     </footer>
 
-    <script>
-        var clapprPlayer;
+<script>
+var clapprPlayer;
+var domains = [];
+var subdomain = '601';  // Edit this per HTML file
 
-        function showPlayer(playerType, stream) {
-            if (playerType === "clappr") {
-                if (clapprPlayer) {
-                    clapprPlayer.destroy();
-                }
+// Load domains from txt file
+fetch('domains.txt')
+  .then(response => response.text())
+  .then(data => {
+    domains = data.trim().split('\n').filter(d => d.trim());
+    // Auto-load initial stream after domains load
+    setTimeout(() => showPlayer('clappr', getRandomStream('daffodil.m3u8')), 500);
+  })
+  .catch(() => {
+    console.error('Failed to load domains.txt');
+  });
 
-                clapprPlayer = new Clappr.Player({
-                    source: stream,
-                    parentId: "#playerContainer",
-                    height: '100%',
-                    width: '100%',
-                    autoPlay: true,
-                });
-            }
-        }
+function getRandomStream(streamPath, subdomain = '601') {
+  if (domains.length === 0) {
+    return `https://${subdomain}.shadow-ran.online/${streamPath}`; // Fallback
+  }
+  const randomDomain = domains[Math.floor(Math.random() * domains.length)];
+  return `https://${subdomain}.${randomDomain}/${streamPath}`;
+}
 
-        window.onload = function() {
-            showPlayer('clappr', 'https://601.833577.xyz/daffodil.m3u8');
-        };
-    </script>
+function showPlayer(playerType, stream) {
+  if (playerType === "clappr") {
+    if (clapprPlayer) {
+      clapprPlayer.destroy();
+    }
+    clapprPlayer = new Clappr.Player({
+      source: stream,
+      parentId: "#playerContainer",
+      height: '100%',
+      width: '100%',
+      autoPlay: true,
+    });
+  }
+}
+</script>
     <script>
         document.addEventListener('contextmenu', function (e) {
             e.preventDefault();
@@ -156,10 +173,11 @@
         });
     </script>
     <script src="js/bootstrap.bundle.min.js"></script>
+
+
 <script type="text/javascript">
-    aclib.runPop({
-        zoneId: '10754426',
-    });
-</script>
-</body>
+aclib.runPop({
+zoneId: '10754426',
+});
+</script></body>
 </html>
